# Globe

./: .gitignore  LICENSE  et --soft HEAD~2
.Bot/: Bot.bat  VsCodeOpenCodeChatBot.py  commands.Bot
.Bot/opencode-remote/: .vscodeignore  extension.js  package-lock.json  package.json
.Old/0/: cpp20.cpp  main.cpp  map_creator.cpp  map_viewer.cpp  tempCodeRunnerFile.cpp  win64_platform.cpp
.Old/1/: BaseStaticMapCreator.cpp  ColorPicker.cpp  ColorPrinter.cpp  ConstantBuildingsDataTableCreator.cpp  ConstantInfrastructureMapCreator.cpp  ConstantProvincesMapCreator.cpp  ConstantValuesMapCreator.cpp  CurrentTickCounterClock.cpp  CurrentTickCounterClockDelay.cpp  CyclicalDailyClimateMapCreator.cpp  CyclicalHourlyClimateMapCreator.cpp  CyclicalMonthlyLocalsMapCreator.cpp  EventualVolcanicRiverMapCreator.cpp  GlobeViewer.cpp  IconCreator.cpp  IconViewer.cpp  NpcIconCreator.cpp  NpcIconViewer.cpp
.Old/1/GameFiles/Palletes/: 1SkinPallete.txt
0Sources/: Copernicus DEM GLO-90.url
4DeepSeek/: Code4Deepseek.txt  Dir4Deepseek.txt  GameCode4Deepseek.txt  OldCode0.txt  OldCode1.txt  OldDir4Deepseek.txt  SourceCode4Deepseek.txt
Code/: BitMapViewer.cpp  CompressHeightMap.cpp  Data4DeepSeek.cpp  DivideHeightMap.cpp  GlobeVulkan.cpp  HexPngCreator.cpp  color_ramp.txt  copernicus_online.vrt  readmap.cpp
Shaders/: frag.spv  fragment.glsl  vert.spv  vertex.glsl
SourceCode/: CMakeLists.txt
